Complete redesign of the data server
1) Now pulls from a real aces/pies data source, DCI catalog rack.  Not by scraping a website
2) Has two jobs that will run as cron jobs.  Reading DCI emails, downloading the file in the link, and sending them to a google drive folder.  Another job will read this google drive folder and either insert or update data.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-cssselect==1.0.1
-Django==1.10.5
-django-filter==1.0.1
-djangorestframework==3.5.4
-lxml==3.7.3
-Markdown==2.6.8
-olefile==0.44
-pillow==4.0.0
-requests==2.13.0
-django-cors-headers==2.0.2
-psycopg2==2.7.1
-django-debug-toolbar==1.7
-sklearn
-Pillow==4.0.0
+Django
+django-filter
+djangorestframework
+django-cors-headers
+django-debug-toolbar
+django-mptt
+psycopg2
+pytest
+pytest-django
+google-api-python-client
+requests
